--- a/style.css
+++ b/style.css
@@ -7,26 +7,26 @@
 
 .container {
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(135deg, #153677, #4e085f);
+    min-height: 100vh;
+    background: linear-gradient(150deg, #156062, #00c092);
     padding: 10px;
 }
 
 .todo-app {
     width: 100%;
     max-width: 500px;
-    height: 93vh;
-    background-color: #ffff;
+    background-color: #00c092;
     margin: 10px auto 20px;
     padding: 40px 30px 70px;
     border-radius: 10px;
 }
 
 .todo-app h2 {
-    color: #002765;
+    color: #156062;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    margin-left: 22%;
 }
 
 .todo-app h2 img {
@@ -41,8 +41,9 @@
     justify-content: space-between;
     background: #eddef0;
     border-radius: 30px;
-    padding-left: 20px;
-    margin-bottom: 25px;
+    padding-left: 1rem;
+    margin-bottom: 2rem;
+    margin-right: 1rem;
 }
 
 input {
@@ -57,8 +58,8 @@ input {
 button {
     border: none;
     outline: none;
-    padding: 10px 50px;
-    background: #ff5945;
+    padding: 10px 40px;
+    background: #FB8960;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
@@ -72,6 +73,9 @@ ul li {
     user-select: none;
     cursor: pointer;
     position: relative;
+    background-color: antiquewhite;
+    border-radius: 10px;
+    margin-bottom: 5px;
 }
 
 ul li::before {
@@ -88,7 +92,7 @@ ul li::before {
 }
 
 ul li.checked {
-    color: #555;
+    color: lightslategray;
     text-decoration: line-through;
 }
 
@@ -110,5 +114,13 @@ ul li span {
 }
 
 ul li span:hover {
-    background: #edeef0;
+    background: #156062;
+    color: #fff;
+    margin-right: 2px;
+}
+
+hr.dot {
+    outline: none;
+    border: 1px solid #FB8960;
+    margin-top: 25px;
 }
