--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@
     min-height: 100vh;
     background: linear-gradient(150deg, #156062, #00c092);
     padding: 10px;
+    display:flex;
 }
 
 .todo-app {
+    z-index: 1;
     width: 100%;
     max-width: 500px;
     background-color: #00c092;
@@ -123,4 +125,51 @@ hr.dot {
     outline: none;
     border: 1px solid #FB8960;
     margin-top: 25px;
+}
+
+.eventTask {
+    z-index: 10;
+    width: 100%;
+    max-width: 500px;
+    background-color: #00c092;
+    margin: 10px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+    border: 2px solid pink;
+}
+
+.eventDivTop {
+    color: #156062;
+    background-color: #eddef0;
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    box-sizing: border-box;
+    margin-bottom: 1rem;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.eventTask h2 {
+    color: yellow;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-left: 22%;
+}
+
+.eventDivBottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.eventDivBottom .buttonLeft,
+.eventDivBottom .buttonRight {
+    font-size: 14px;
+    width: 10rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin: 10px;
+    /* text-transform: uppercase; */
 }
