--- a/style-newtab.css
+++ b/style-newtab.css
@@ -44,10 +44,16 @@ h1 {
     flex-direction: column;
 }
 
+hr.solid {
+    border-top: 3px solid #bbb;
+}
+
 .motivation-meme {
     max-width: 30rem;
     height: auto;
-    border-radius: 10px;
+    max-height: 70vh;
+    border-radius: 20px;
+    filter: drop-shadow(10px 10px 4px #9198e5);
 }
 
 .todo-app {
