--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@
 .todo-app h2 {
     color: #156062;
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
-    margin-left: 22%;
+    margin-bottom: 1rem;
 }
 
 .todo-app h2 img {
